# RayTracing

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/src/exporters/: ppm.rs
desktop/src/importers/: obj.rs
python scratchpad/: Untitled.ipynb
renderer/: Cargo.toml
renderer/src/: bounding_box.rs  bvh.rs  camera.rs  hit.rs  hittable.rs  image.rs  integrator.rs  lib.rs  material.rs  math.rs  mesh.rs  onb.rs  pdf.rs  ray.rs  scene.rs  shape.rs  texture.rs  transform.rs  vec3.rs
