[package]
name = "desktop"
version = "0.1.0"
authors = ["Owen Campbell <ocampbell95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.17.3"
image = "0.23.14"
rand = "0.8.4"
rand_pcg = "0.3.1"
rayon = "1.5.1"
obj = "0.10.2"
renderer = { path = "../renderer" }
